--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     
     <header>
-        <img src="/images/ESCUDO_WEB.png" alt="Escudo">
+        <img src="/insti93/images/ESCUDO_WEB.png" alt="Escudo">
         <a href="Landing.html" class="text-white">
             <h1 style="margin-right: 850px;">I.S.F.T. N° 93</h1>
         </a>
@@ -69,7 +69,7 @@
                             <h2 class="text-white" style="margin-left: 125px;">Inscripción a materias de Contable</h2>
                         </a>
                         <a href="MateriasContable.html" class="showcase-img-link">
-                            <div class="showcase-img" style="background-image: url('/Instituto_Jaramillo_Alejo/images/contabilidad.jpg')">
+                            <div class="showcase-img" style="background-image: url('/insti93/Instituto_Jaramillo_Alejo/images/contabilidad.jpg')">
                             </div>
                         </a>
                     </div>
@@ -78,7 +78,7 @@
                             <h2 class="text-white" style="margin-left: 125px;">Inscripción a materias de Enfermería</h2>
                         </a>
                         <a href="MateriasEnfermeria.html" class="showcase-img-link">
-                            <div class="showcase-img" style="background-image: url('/Instituto_Jaramillo_Alejo/images/enfermeria.jpg')">
+                            <div class="showcase-img" style="background-image: url('/insti93/Instituto_Jaramillo_Alejo/images/enfermeria.jpg')">
                             </div>
                         </a>
                     </div>
@@ -92,7 +92,7 @@
                             <h2 class="text-white" style="margin-left: 125px;">Inscripción a materias de Marketing</h2>
                         </a>
                         <a href="MateriasMarketing.html" class="showcase-img-link">
-                            <div class="showcase-img" style="background-image: url('/Instituto_Jaramillo_Alejo/images/marketing.jpg')">
+                            <div class="showcase-img" style="background-image: url('/insti93/Instituto_Jaramillo_Alejo/images/marketing.jpg')">
                             </div>
                         </a>
                     </div>
@@ -101,7 +101,7 @@
                             <h2 class="text-white" style="margin-left: 125px;">Inscripción a materias de Adm. Pública</h2>
                         </a>
                         <a href="MateriasPublica.html" class="showcase-img-link">
-                            <div class="showcase-img" style="background-image: url('/Instituto_Jaramillo_Alejo/images/publica.jpg')">
+                            <div class="showcase-img" style="background-image: url('/insti93/Instituto_Jaramillo_Alejo/images/publica.jpg')">
                             </div>
                         </a>
                     </div>
@@ -115,7 +115,7 @@
                             <h2 class="text-white" style="margin-left: 125px;">Inscripción a materias de Sistemas</h2>
                         </a>
                         <a href="MateriasSistemas.html" class="showcase-img-link">
-                            <div class="showcase-img" style="background-image: url('/Instituto_Jaramillo_Alejo/images/sistemas.jpg')">
+                            <div class="showcase-img" style="background-image: url('/insti93/Instituto_Jaramillo_Alejo/images/sistemas.jpg')">
                             </div>
                         </a>
                     </div>
@@ -124,7 +124,7 @@
                             <h2 class="text-white" style="margin-left: 125px;">Inscripción a materias de Turismo</h2>
                         </a>
                         <a href="MateriasTurismo.html" class="showcase-img-link">
-                            <div class="showcase-img" style="background-image: url('/Instituto_Jaramillo_Alejo/images/turismo.jpg')">
+                            <div class="showcase-img" style="background-image: url('/insti93/Instituto_Jaramillo_Alejo/images/turismo.jpg')">
                             </div>
                         </a>
                     </div>
