--- a/Login.html
+++ b/Login.html
@@ -13,7 +13,7 @@
         <div class="info">
             <br><br><br><br><br><br><br><br><br><br><br>
             <br><br><br><br><br><br><br><br><br><br>
-            <img src="/images/ESCUDO_WEB.png" alt="Escudo">
+            <img src="/insti93/images/ESCUDO_WEB.png" alt="Escudo">
         </div>
         <form action="#" class="algo" onsubmit="return validarFormulario()">
             <br>
