--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="imagen">
-        <img src="/images/ESCUDO_WEB.png" alt="Escudo">
+        <img src="/insti93/images/ESCUDO_WEB.png" alt="Escudo">
     </div>
     <div class="formulario">
         <h1 >Registro</h1>
