--- a/MateriasMarketing.html
+++ b/MateriasMarketing.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <img src="/images/ESCUDO_WEB.png" alt="Escudo">
+        <img src="/insti93/images/ESCUDO_WEB.png" alt="Escudo">
         <h1>Inscripción de Alumnos</h1>
         
         <br><br>
